--- a/package.json
+++ b/package.json
@@ -13,27 +13,26 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap-icons": "^1.7.2",
-        "laravel-mix": "^6.0.6",
+        "browser-sync": "^2.26.7",
+        "compass-mixins": "^0.12.10",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.12",
-        "browser-sync": "^2.26.7",
-        "compass-mixins": "^0.12.10"
+        "vue-loader": "^17.0.0",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue-router": "^4.0.12",
         "@mdi/font": "^3.7.95",
         "bootstrap": "^4.4.1",
         "bootstrap-maxlength": "^1.6.0",
         "chart.js": "^2.8.0",
         "codemirror": "^5.48.0",
         "flag-icon-css": "^3.3.0",
-        "jquery": "3.4.1",
+        "jquery": "^3.6.0",
         "jvectormap": "^2.0.4",
         "moment": "^2.24.0",
         "owl.carousel": "^2.3.4",
@@ -44,6 +43,7 @@
         "select2": "^4.0.7",
         "select2-bootstrap-theme": "0.1.0-beta.10",
         "twbs-pagination": "^1.4.1",
-        "typeahead.js": "^0.11.1"
+        "typeahead.js": "^0.11.1",
+        "vue-router": "^4.0.12"
     }
 }
